--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -9,4 +9,13 @@
     width: 30px;
     margin: 0 0 0 0.5em;
   }
+  .Header-alert {
+    color: #33b13a;
+    font-size: 14px;
+    margin-left: 5px;
+  }
+  .Header a {
+    text-decoration: none;
+    color: #33b1ff;
+  }
 }
